continuing online help pages. setting text antialiasing for non-aqua look-and-feels. disabling audio-box-assistent button in the prefs.
git-svn-id: file:///tmp/Eisenkraut@109 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/help/TimelineFrame.html
+++ b/trunk/help/TimelineFrame.html
@@ -1,15 +1,42 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Waveform Frame</title>
+<title>Document Frame</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
-<h1>Waveform Frame</h1>
+<h1>Document Frame</h1>
 <p>
-The waveform (timeline) frame shows a <A HREF="TimelineAxis.html">timeline axis</A> with time advancing from left to right, a <A HREF="TransmitterTrack.html">list of tracks</A> corresponding to the channels of the currently open sound file. on the bottom, the <A HREF="TimelineScroll.html">timeline scrollbar</A> allows to navigate in the timeline. operations on the tracks are determined by the choice of a tool from the timeline toolbar on the top margin.
+The document frame represents an opened audio file (or a compound of multiple mono files). Here you do the main editing and navigation, here you find the transport controls to play back the sound. The document frame is shown below. You can use the mouse to move over the text labels and press the button to go to specific help files.
 </P>
-<IMG SRC="tutWaveform.png" ALT="">
+<img src="waveformNew.png" width="564" height="460" border="0" usemap="#map">
+
+<map name="map">
+<!-- #$-:Image map file created by GIMP Image Map plug-in -->
+<!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
+<!-- #$-:Please do not edit lines starting with "#$" -->
+<!-- #$VERSION:2.3 -->
+<!-- #$AUTHOR:Hanns Holger Rutz -->
+<area shape="rect" coords="0,26,47,50" alt="Catch" href="ToolCatch.html">
+<area shape="rect" coords="52,26,124,50" alt="Edit Modes" href="ToolEditModes.html">
+<area shape="rect" coords="130,27,178,51" alt="Timeline Tools" href="TimelineTools.html">
+<area shape="rect" coords="185,27,250,51" alt="Blending" href="ToolBlending.html">
+<area shape="rect" coords="256,27,331,51" alt="Region Drag" href="ToolRegionDrag.html">
+<area shape="rect" coords="315,112,421,134" alt="Transport Controls" href="TransportTools.html">
+<area shape="rect" coords="480,125,563,146" alt="Timeline Axis" href="TimelineAxis.html">
+<area shape="rect" coords="472,153,554,174" alt="Marker Axis" href="MarkerAxis.html">
+<area shape="rect" coords="135,114,216,136" alt="Track Selector" href="TrackSelector.html">
+<area shape="rect" coords="78,408,202,431" alt="Solo, Mute, Panorama" href="ChannelTrack.html">
+<area shape="rect" coords="30,436,108,459" alt="Info Buttons" href="AudioInfo.html">
+<area shape="rect" coords="450,275,533,300" alt="SRC Indicator" href="SampleRateConversion.html">
+<area shape="rect" coords="120,201,195,225" alt="Vertical Axis" href="VerticalAxis.html">
+<area shape="rect" coords="218,201,311,224" alt="Peak Amplitude" href="VerticalAxis.html">
+<area shape="rect" coords="343,201,436,224" alt="RMS Amplitude" href="VerticalAxis.html">
+<area shape="rect" coords="121,311,201,332" alt="Timeline Scroll" href="TimelineScroll.html">
+<area shape="rect" coords="136,234,222,258" alt="Channel Meter" href="ChannelMeters.html">
+<area shape="rect" coords="259,156,441,179" alt="Timeline Position" href="TimelinePosition.html">
+<area shape="rect" coords="492,31,554,50" alt="Collapse" href="WaveformCollapse.html">
+</map>
 </body>
 </html>
