--- a/trunk/help/prefsAudio.html
+++ b/trunk/help/prefsAudio.html
@@ -22,6 +22,7 @@ Audio preferences affect the playback of sound through supercollider
 <LI><A HREF="prefsSCBlockSize.html">Audio Block Size</A></LI>
 <LI><A HREF="prefsAudioBusses.html">Maximum Audio Busses</A></LI>
 <LI><A HREF="prefsSCMemSize.html">Realtime Memory</A></LI>
+<LI><A HREF="prefsSCRendezvous.html">Publish to Rendezvous</A></LI>
 </UL>
 </body>
 </html>
