--- a/trunk/help/prefsLookAndFeel.html
+++ b/trunk/help/prefsLookAndFeel.html
@@ -24,26 +24,26 @@ swing.installedlaf.substraven.name=Substance Raven Graphite
 swing.installedlaf.substraven.class=org.jvnet.substance.skin.SubstanceRavenGraphiteLookAndFeel
 </pre>
 <P><A HREF="swing.properties">Here</A> is a sample file for <code>swing.properties</code>.</P>
-<h3>Look-and-Feel class</h3>
+<H2>Look-and-Feel class</H2>
 <p>
 Which look-and-feel classes are used can be specified in the Look-and-Feel choice box. All the look-and-feels listed in the <code>&quot;swing.properties&quot;</code> file appear here.</P>
 <P>Here is how the New-Empty-Document dialog looks with Metal and Aqua look-and-feel respectively:</P>
 <IMG SRC="prefsLookAndFeel_Metal.png" ALIGN="TOP" ALT="Metal Look-and-Feel"><IMG SRC="prefsLookAndFeel_Aqua.png" ALIGN="TOP" ALT="Aqua Look-and-Feel">
 <P>Because switching the look-and-feel would require a lot of internal updates to the application, changes become only effective after quitting and restarting Eisenkraut.
 </p>
-<H3>Internal Frames</H3>
+<H2>Internal Frames</H2>
 <p>
 All main, document and supportive windows and palettes can be configured to be either independant frames or internal frames inside one encompassing application frame. On Mac OS X users will likely not use internal frames as the native look-and-feel uses independant windows. On Windows (and probably Linux), people are accustomed to have each application present itself as a big screen filling frame with all its child windows internal to that frame. So the default settings on Windows and Linux is to use internal frames. Here's how internal frames look:
 </P>
 <IMG SRC="prefsLookAndFeel_Internal.png" ALT="Internal Frames Look">
 <P>&nbsp;</P>
-<h3>Frame Intruding Grow Box</h3>
+<H2>Frame Intruding Grow Box</H2>
 <p>
 Depending on your look-and-feel and operating system, window resizing (grow) boxes may intrude into the frames. This is for example true on Mac OS. In this case, you should check this preferences which will arrange widgets and frame contents so they are not obscured by the grow box. This is usually not necessary on Windows computers.</P><P>Here you see that the grow box is not intruding the window with the Metal look-and-feel, but the grow box of the Aqua look-and-feel is intruding (and accordingly when checking the preferences option, the Cancel button in this screenshot is moved a bit to the left):
 </p>
 <IMG SRC="prefsLookAndFeel_NoGrow.png" ALIGN="BOTTOM" ALT="Metal Look-and-Feel Grow Box"><IMG SRC="prefsLookAndFeel_Grow.png" ALIGN="BOTTOM" ALT="Aqua Look-and-Feel Grow Box">
 <P>&nbsp;</P>
-<h3>Floating Palettes</h3>
+<H2>Floating Palettes</H2>
 <p>
 When checked, some palette windows appear in Mac OS X floating palette style (tiny window bar, tiny window gadgets). These palettes (e.g. the Observer or the Control Room palette) are then floating above all other windows and are hidden when the application looses focus.
 </P><P>
