--- a/trunk/help/prefsSuperColliderApp.html
+++ b/trunk/help/prefsSuperColliderApp.html
@@ -11,6 +11,8 @@
 the path specifies the synthesis server which is run as a unix command when pressing the boot button of the main window. it must point to the file <code>scsynth<var>[</var>.exe<var>]</var></code> in your supercollider folder! the path is usually something like <code>&quot;/usr/bin/scsynth&quot;</code>
 or <code>&quot;/Applications/SuperCollider_f/scsynth&quot;</code>.
 </p><P>
-note that traditional computers are not shipped with supercollider pre-installed, so you may have to install supercollider first before using eisenkraut. the main supercollider site is <A HREF="http://www.audiosynth.com" CLASS="ext">www.audiosynth.com</A>. downloads can be found for example on <A HREF="http://sourceforge.net/projects/supercollider" CLASS="ext">sourceforge.net/projects/supercollider</A>.
+note that traditional computers are not shipped with supercollider pre-installed, so you may have to install supercollider first before using eisenkraut. the main supercollider site is <A HREF="http://supercollider.sf.net" CLASS="ext">supercollider.sf.net</A>, which has download links for all platforms.
+</P><P>the recommended version is SuperCollider 3.2 or newer although it should work with older SC3 versions.
+</P>
 </body>
 </html>
