further help docs
git-svn-id: file:///tmp/Eisenkraut@110 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/help/ToolBlending.html
+++ b/trunk/help/ToolBlending.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
-<h1>Blending Mode</h1>
+<h1><IMG SRC="iconBlendTool.png" ALT="">&nbsp;Blending Mode</h1>
 <p>
 When the blending mode is activated (keyboard <code>Caps-Lock</code>), most editing operations are carried out in a smooth way, by applying a user definable crossfade at the margins of the processed selection. <STRONG>Example:</STRONG> in a ten second sound file, you select the portion from 0:04 till 0:06 and hit <code>Delete</code> to remove it. You may end up with a click sound at the cutting point because of the sudden jump in the waveform that may occur. An effective means to get rid of these clicks is to make a softer cut. To do this, activate blending. Assume, you have selected a blending duration of 20 milliseconds. Now the before mentioned cutting operation will be carried out, such that a sound bit 0:05.990 till 0:06.000 (re original timeline) will be faded in at 0:04 (re target timeline) and a sound bit 0:04.000 till 0:04.010 (re original timeline) will be faded out at 0:04 (re target timeline), while still exactly the portion from 0:04 till 0:06 is cutted out. This means, you get a 20 millisecond crossfade at the cutting position.
 </p><p>
