some more help pages ; proper zoom cursor
git-svn-id: file:///tmp/Eisenkraut@111 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/help/faq.html
+++ b/trunk/help/faq.html
@@ -25,7 +25,11 @@ currently, eisenkraut has no means of finding out automatically about the connec
 <!-- <h3>regarding version 0.7</h3> -->
 <h4>what happened to <code>Process->Silence</code>?</h4>
 <P>
-the same functionality is available by choosing the <code>Overwrite</code> edit mode and <code>Edit->Clear</code>.
+the same functionality is available by choosing the <code>Overwrite</code> <A HREF="toolEditModes.html">edit mode</A> and <code>Edit->Clear</code>.
+</P>
+<h4>what happened to <code>Process-&gt;Mix</code>?</h4>
+<P>
+a similar functionality is available by choosing the <code>Mix</code> <A HREF="toolEditModes.html">edit mode</A> and pasting audio. if you need to adjust the mix amount, copy first into an empty document, adjust the gain using Process-&gt;Gain, then paste in Mix mode.
 </P>
 </body>
 </html>
