more help files
git-svn-id: file:///tmp/Eisenkraut@117 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/help/TimelineToolPointer.html
+++ b/trunk/help/TimelineToolPointer.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
-<h1>Pointer Timeline Tool</h1>
+<h1><IMG SRC="iconPointerTool.png" ALT="">&nbsp;Pointer Timeline Tool</h1>
 <p>
 The pointer tool (keyboard <code>F1</code>) is used to set the timeline position and selection. When using other tools, this can also be accomplished by using the <A HREF="TimelineAxis.html">timeline axis</A>.
 </p><p>
