--- a/trunk/help/TimelineToolZoom.html
+++ b/trunk/help/TimelineToolZoom.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
-<h1>Zoom Timeline Tool</h1>
+<h1><IMG SRC="iconZoomTool.png" ALT="">&nbsp;Zoom Timeline Tool</h1>
 <p>
 The zoom tool (keyboard <code>F4</code>) is used to increase or decrease the horizontal (time) resolution of the timeline frame. Alternatively press <code>Ctrl+Cursor Left/Right</code>. To zoom in, <code>Click+Drag</code> anywhere on the trajectory pane. To zoom out, <code>Alt+Click</code> anywhere on the waveform pane. At some point waveform display switches from the gray shaded peak/rms view to sample level view.
 </P><P>
