--- a/trunk/help/ToolBlending.html
+++ b/trunk/help/ToolBlending.html
@@ -18,9 +18,9 @@ The blending controls can be brought up in a separate window by doing a mouse <t
 </P><P>
 Note that the blending span gets automatically truncated, if the possible crossfade span is too small.  Also note that blending may be undesired for many processes, notably when using fade-in and fade-out. The signal processing is not aware of this fact, so you may need to turn off blending temporarily in these cases.
 </P>
-<IMG SRC="BlendingSettings.png" ALT="Blending Settings Window">
 <P>Here is a screenshot of the blending window:</P>
-<P>If you terminate the blending window by explictly clicking on the &quot;Close&quot; button, the settings are stored in the blending history which can be accessed from the choice-button right to the blending gadget. Here you will find the five most recent settings:</P>
+<IMG SRC="BlendingSettings.png" ALT="Blending Settings Window">
+<P>If you open the blending window in popup mode (keeping the mouse pressed over the combo box), you can terminate the window explictly by clicking on the &quot;Close&quot; button. In this case, the settings are stored in the blending history which can be accessed from the choice-button right to the blending gadget. Here you will find the five most recent settings:</P>
 <IMG SRC="BlendingRecent.png" ALT="Recent Blending History">
 </body>
 </html>
