--- a/trunk/help/ToolCatch.html
+++ b/trunk/help/ToolCatch.html
@@ -8,7 +8,7 @@
 <body>
 <h1><IMG SRC="iconCatch.png" ALT="">&nbsp;Catch Mode</h1>
 <p>
-When catch mode is active (keyboard <tt>V</tt>), the timeline view will automatically advance, just before the timeline position moves outside the window in playback (what is called 'Page Scroll during Playback' in ProTools for example) or timeline-drag. Dragging the <A HREF="TimelineScroll.html">timeline scroll bar</A> disables catch if the drag is released and the timeline position is outside the view. When catch &quot;looses track&quot; of the timeline position, simply re-active it by pressing <code>V</code> twice.
+When catch mode is active (keyboard <tt>V</tt>), the timeline view will automatically advance, just before the timeline position moves outside the window in playback (what is called 'Page Scroll during Playback' in Protools for example) or timeline-drag. Dragging the <A HREF="TimelineScroll.html">timeline scroll bar</A> disables catch if the drag is released and the timeline position is outside the view. When catch &quot;looses track&quot; of the timeline position, simply re-active it by pressing <tt>V</tt> again.
 </p>
 </body>
 </html>
