--- a/trunk/help/TimelineScroll.html
+++ b/trunk/help/TimelineScroll.html
@@ -9,14 +9,14 @@
 <h1>Timeline Scrollbar</h1>
 <p>
 The timelime scrollbar is used to select the portion of the timeline which
-is visible in the timeline frame. The scrollbars indicate the visible portion and can be dragged with the mouse to navigate through the session. They disappear when the total session's duration is visible in the timeline frame.
+is visible in the <A HREF="TimelineFrame.html">document frame</A>. The scrollbars indicate the visible portion and can be dragged with the mouse to navigate through the session. They disappear when the total session's duration is visible (completely zoomed out, keyboard <tt>Meta</tt>+<tt>Cursor Left</tt> or <tt>Alt</tt>+<tt>A</tt>).
 </p>
 <IMG SRC="TimelineScroll.png" ALT="Screenshot of the Timeline Scrollbar">
 <p>
-A blue shaded rectangle indicates the current timeline selection in respect to the total session duration. A red vertical line indicates the current timeline position in respect to the total session duration. To alter these, use the
+A blue shaded rectangle indicates the current timeline selection with respect to the total document duration. The selected span is used for cut and delete as well as applying a filter from the process menu. A red vertical line indicates the current timeline position with respect to the total document duration. The timeline position represents the position at which audio gets pasted in and also corresponds to the starting point for playback. To alter the selection span and the timeline position, use the
 <A HREF="TimelineAxis.html">timeline axis</A> or the <A HREF="TimelineToolPointer.html">pointer tool</A>.
 </p><P>
-Typing <code>Ctrl+Cursor Left</code> will zom out, <code>Ctrl+Cursor Right</code> will zoom in. For zoom-in, when the timeline position (vertical red bar) is visible, the zoom will try to retain the relative timeline position; when timeline position is before the visible span, the left margin will not be altered, when the timeline position is after the visible span, the right margin will not be altered. Alternatively you can use the <A HREF="TimelineToolZoom.html">zoom tool</A>.
+Typing <tt>Ctrl</tt>+<tt>Cursor Left</tt> will zoom out, <tt>Ctrl</tt>+<tt>Cursor Right</tt> will zoom in. For zoom-in, when the timeline position (vertical red bar) is visible, the zoom will try to retain the relative timeline position; when timeline position is before the visible span, the left margin will not be altered, when the timeline position is after the visible span, the right margin will not be altered. Alternatively you can use the <A HREF="TimelineToolZoom.html">zoom tool</A>.
 </P>
 </body>
 </html>
